# FerrisBot

./: .env  .gitignore  Cargo.toml  README.md  users.json
src/: main.rs  scheduler.rs  storage.rs  utils.rs  weather.rs
