[package]
name = "FerrisBot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
log = "0.4"
pretty_env_logger = "0.5"
tokio-stream = "0.1"
futures = "0.3"